--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,7 +24,7 @@
 
 .product-name,
 .product-price,
-.product_description {
+.product-description {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
