--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -28,9 +28,9 @@
         </div>
         <div class="col">
             <div class="product-details-container mb-5 mt-md-5">
-                <h4 class="mb-2 fw-bold text-black cta-text">{{ product.name }}</h4>
+                <h4 class="mb-2 product-name">{{ product.name }}</h4>
                 <div class="pricing" style="display: flex;">
-                    <p class="lead mb-2 text-left fw-bold text-black">£{{ product.price }}</p>
+                    <p class="lead mb-2 product-price">£{{ product.price }}</p>
                     {% if is_product_in_favourites %}
                     <a href="{% url 'remove_product_from_favourites' product.id 'product' %}"
                         aria-label="remove product from favourites"
@@ -56,7 +56,7 @@
                         <small class="text-black">No Rating</small>
                         {% endif %}
                         <!-- Products description -->
-                        <p class="fw-bold text-black">{{ product.description }}</p>
+                        <p class="fw-bold text-black product-description">{{ product.description }}</p>
                         <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                             {% csrf_token %}
                             <div class="form-row">
