--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -26,37 +26,40 @@
                 {% endif %}
             </div>
         </div>
-        <div class="col">
-            <div class="product-details-container mb-5 mt-md-5">
-                <h4 class="mb-2 product-name">{{ product.name }}</h4>
-                <div class="pricing" style="display: flex;">
-                    <p class="lead mb-2 product-price">£{{ product.price }}</p>
-                    {% if is_product_in_favourites %}
-                    <a href="{% url 'remove_product_from_favourites' product.id 'product' %}"
-                        aria-label="remove product from favourites"
-                        class="favourite favourite-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
-                    {% else %}
-                    <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add product to favourites"
-                        class="favourite text-danger ml-3"><i class=""></i></a>
-                    {% endif %}
-                </div>
+        {% comment %} <div class="col"> {% endcomment %}
+            {% comment %} <div class="product-details-container mb-5 mt-md-5"> {% endcomment %}
+                {% comment %} <h4 class="mb-2 product-name">{{ product.name }}</h4> {% endcomment %}
+                {% comment %} <div class="pricing" style="display: flex;"> {% endcomment %}
+                    {% comment %} <p class="lead mb-2 product-price">£{{ product.price }}</p> {% endcomment %}
+                    {% comment %} {% if is_product_in_favourites %} {% endcomment %}
+                    {% comment %} <a href="{% url 'remove_product_from_favourites' product.id 'product' %}" {% endcomment %}
+                        {% comment %} aria-label="remove product from favourites" {% endcomment %}
+                        {% comment %} class="favourite favourite-remove text-danger ml-3"><i class="fas fa-heart"></i></a> {% endcomment %}
+                    {% comment %} {% else %} {% endcomment %}
+                    {% comment %} <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add product to favourites" {% endcomment %}
+                        {% comment %} class="favourite text-danger ml-3"><i class=""></i></a> {% endcomment %}
+                    {% comment %} {% endif %} {% endcomment %}
+                {% comment %} </div> {% endcomment %}
                 <!-- Main Products Container -->
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4 mt-2">
+                    <h4 class="mt-5 mb-2 product-name">{{ product.name }}</h4>
+                    <div class="pricing" style="display: flex;">
+                        <p class="lead mb-2 product-price">£{{ product.price }}</p>
                     <div class="product-details-container mb-5 mt-2">
                         {% if product.category %}
-                        <p class="small mt-1 mb-0">
+                        <p class="small mt-1 mb-0 mt-5">
                             <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}"> <i
-                                    class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }} </a>
+                                    class="fas fa-tag"></i>{{ product.category.friendly_name }} </a>
                         </p>
                         {% endif %}
                         <!-- Products rating -->
                         {% if product.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                        <small class="text-muted"><i class="fas fa-star mr-1 mb-2"></i>{{ product.rating }} / 5</small>
                         {% else %}
                         <small class="text-black">No Rating</small>
                         {% endif %}
                         <!-- Products description -->
-                        <p class="fw-bold text-black product-description">{{ product.description }}</p>
+                        <p class="product-description text-left">{{ product.description }}</p>
                         <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                             {% csrf_token %}
                             <div class="form-row">
