--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -7,3 +7,21 @@
   margin-top: .5rem;
   margin-bottom: .5rem;
 }
+
+.delivery-info {
+  height: ;
+  color: #000;
+}
+
+/* .carousel { */
+  /* margin-top: 50px; */
+/* } */
+/*  */
+/* .carousel-inner { */
+  /* height: 100px; */
+/* } */
+/*  */
+/* .carousel-caption { */
+  /* color: #fff; */
+  /* top: 50%; */
+/* } */
