--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -8,11 +8,11 @@
   margin-bottom: .5rem;
 }
 
-.delivery-info {
-  height: ;
-  color: #000;
-}
-
+/* .delivery-info { */
+  /* height: ; */
+  /* color: #000; */
+/* } */
+/*  */
 /* .carousel { */
   /* margin-top: 50px; */
 /* } */
