--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,7 +34,7 @@
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2 class="secondary-heading">Nutrition</h2>
-                    <a href="/products/?category=nutrition" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+                    <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2 class="secondary-heading">Equipment</h2>
-                    <a href="/products/?category=fitness_equipment" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+                    <a href="/products/?category=fitness_equipment" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
                 </div>
             </div>
         </div>
@@ -55,7 +55,7 @@
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2 class="secondary-heading">Apparel</h2>
-                    <a href="/products/?category=shorts,tops_t-shirts,sports_bra,leggings,bodysuits,shorts_women" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+                    <a href="/products/?category=shorts,tops_t-shirts,sports_bra,leggings,bodysuits,shorts_women" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
                 </div>
             </div>
         </div>
