--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,15 @@
     <div class="container-fluid px-0">
         <div class="row">
             <div class="col">
-                <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1.jpg" alt="" class="img-fluid">
+                <img srcset="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_375x.jpg 375w,
+                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_550x.jpg 550w,
+                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_750x.jpg 750w,
+                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1100x.jpg 1100w,
+                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1500x.jpg 1500w,
+                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1780x.jpg 1780w,
+                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_2000x.jpg 2000w,
+                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_2880x.jpg 2880w" 
+                            sizes="auto" src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1920x.jpg" alt="man and woman exercising" width="2880" height="1548">
             </div>
             <div class="col" id="cta-text">
                 <h5>Welcome to Love Fitness</h5>
