Add new home page image

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,31 +13,23 @@
 {% block content %}
 <section>
     <div class="container-fluid px-0">
-        <div class="row">
-            <div class="col">
-                <img srcset="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_375x.jpg 375w,
-                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_550x.jpg 550w,
-                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_750x.jpg 750w,
-                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1100x.jpg 1100w,
-                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1500x.jpg 1500w,
-                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1780x.jpg 1780w,
-                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_2000x.jpg 2000w,
-                            //https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_2880x.jpg 2880w" 
-                            sizes="auto" src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1920x.jpg" alt="man and woman exercising" width="2880" height="1548">
+        
+                            <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_test.jpg" class="img-fluid" alt="man and woman exercising">
+                            
+                            <div class="cta-text">
+                                <div class="overlay"></div>
+                                <h5>Welcome to Love Fitness</h5>
+                                <h2>Smash all your fitness goals</h2>
+                                <a href="/products/?category=shorts,tops_t-shirts,sports_bra,leggings,bodysuits,shorts_women,nutrition,fitness_equipment" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+                            </div>
             </div>
-            <div class="col" id="cta-text">
-                <h5>Welcome to Love Fitness</h5>
-                <h2>Smash all your fitness goals</h2>
-                <a href="/products/?category=shorts,tops_t-shirts,sports_bra,leggings,bodysuits,shorts_women,nutrition,fitness_equipment" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
-            </div>
-        </div>
-    </div>
 </section>
-
 <div class="container-fluid mb-5">
     <div class="row text-center">
+        <h1>SHOP BY CATEGORY</h1>
         <div class="col">
             <div class="box">
+               
                 <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/nutrition.jpg" alt="" width="610" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
