--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -12,11 +12,19 @@
     padding-bottom: 1rem;
 }
 
-#cta-text {
-    margin-top: 15%;
-    padding-left: 5rem;
-    font-family: exo;
-    color: black;
+/* .container-fluid { */
+    /* position: relative; */
+    /* text-align: center; */
+    /* color: white; */
+  /* } */
+
+.cta-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
 }
 
 .secondary-heading {
