--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -63,8 +63,8 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 order-md-first">
-                    <p class="text-muted mt-3 text-md-left">
+                <div class="col-12 col-md-6 col-sm-6 order-md-first">
+                    <p class="text-muted mt-3 text-md-left secondary-heading">
                         {% if search_term or current_categories or current_sorting != 'None_None' %}
                         <span class="large"><a href="{% url 'products' %}">Products Home</a> | </span>
                         {% endif %}
