--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
 
 /* --- Global styling --- */
 .navbar {
@@ -19,7 +20,7 @@
 
 .primary-heading,
 .secondary-heading {
-    font-family: exo;
+    font-family: 'Ropa Sans', sans-serif;
 }
 
 .product-name,
@@ -29,28 +30,6 @@
     font-weight: 400;
 }
 
-
-html {
-    height: 100%;
-}
-
-body {
-    height: calc(100vh - 164px);
-    color: #555;
-}
-
-/* from Bulma */
-.icon {
-    align-items: center;
-    display: inline-flex;
-    justify-content: center;
-    height: 1.5rem;
-    width: 1.5rem;
-}
-
-.bg-blue-yonder {
-    background-color: #018190 !important;
-}
 
 /* To set colour on Footer and Info banner */
 .bg-wild-blue-yonder {
