--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,8 @@
         </div>
     </div> -->
     <!-- Footer -->
-    <footer class="bg-black">
+    <div class="col-12">
+    <footer class="bg-black mt-5">
         <div class="container pt-5">
             <div class="row">
                 <!-- Logo and social media links -->
@@ -220,6 +221,7 @@
                     </div>
                 </div>
     </footer>
+</div>
     {% block postloadjs %}
     <script src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/static/js/toast.js" type="text/css"></script>
     {% endblock %}
