Change category section

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -27,6 +27,8 @@
         </div>
       </div>
     </div>
+  </section>
+  <section class="category-section">
     <div class="row text-center">
        <h2 class="text-center secondary-heading text-uppercase mt-2">Shop By Category</h2>
        <div class="row ms-4">
