--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -31,12 +31,12 @@
   <section class="category-section">
     <div class="row text-center">
        <h2 class="text-center secondary-heading text-uppercase mt-2">Shop By Category</h2>
-       <div class="row ms-4">
+       <div class="row ms-4 mb-5">
         <div class="col">
           <div class="card" style="width: 25rem;">
             <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/nutrition.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Nutrition New 1</h5>
+              <h5 class="card-title">Nutrition</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
             </div>
@@ -46,7 +46,7 @@
             <div class="card" style="width: 25rem;">
               <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/equipment.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Equipment New 1</h5>
+                <h5 class="card-title">Equipment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
               </div>
@@ -56,7 +56,7 @@
         <div class="card" style="width: 25rem">
           <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/apparel.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Equipment New 1</h5>
+            <h5 class="card-title">Apparel</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
           </div>
