--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,81 +1,115 @@
 {% extends "base.html" %}
 {% load static %}
+{% block extra_title %}Home{% endblock %}
 {% block page_header %}
-<!--Main header block -->
-<div class="container header-container"></div>
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
 {% endblock %}
-{% block extra_css %}
+{% block content %}
 <link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/home/css/home.css"
     type="text/css" />
-{% endblock %}
 
 
-{% block content %}
 
-<section>
-  <div class="container-fluid">
-    <div class="row text-center">
-      <div class="col-12">
-        <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_test.jpg" class="img-fluid" alt="man and woman exercising" />
-        <div class="cta-text">
-          <div class="overlay"></div>
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-12">
+          <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_test.jpg" class="img-fluid" alt="man and woman exercising" />
+          <div class="cta-text">
+            <div class="overlay"></div>
           <h5>Welcome to Love Fitness</h5>
           <h2>Smash all your fitness goals</h2>
           <a href="/products/?category=shorts,tops_t-shirts,sports_bra,leggings,bodysuits,shorts_women,nutrition,fitness_equipment" class="btn btn-dark rounded-3 text-uppercase" tabindex="-1" role="button" aria-disaabled="true">
             shop now
           </a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="category-section">
-    <div class="row text-center">
-       <h2 class="text-center secondary-heading text-uppercase mt-2">Shop By Category</h2>
-       <div class="row ms-4 mb-5">
-        <div class="col">
-          <div class="card" style="width: 25rem;">
-            <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/nutrition.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Nutrition</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
-            </div>
           </div>
         </div>
+        <section class="category-section">
+        <h2 class="text-center text-uppercase mt-1">Shop</h2>
+        <div class="row mb-5">
           <div class="col">
-            <div class="card" style="width: 25rem;">
-              <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/equipment.jpg" class="card-img-top" alt="...">
+            <div class="card" style="">
+              <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/nutrition.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Nutrition</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card" style="">
+              <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/equipment.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Equipment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
               </div>
             </div>
-          </div>     
-             <div class="col">
-        <div class="card" style="width: 25rem">
-          <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/apparel.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Apparel</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
           </div>
+          <div class="col-sm">
+            <div class="card" style="">
+              <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/apparel.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Apparel</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+              </div>
+            </div>
+          </div>  
+          <div class="col-sm">
+            <div class="card" style="">
+              <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/equipment.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Equipment New 1</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
+              </div>
+            </div>
+          </div>        
         </div>
-      </div>
-      <div class="col">
-        <div class="card" style="width: 25rem;">
-          <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/equipment.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Equipment New 1</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="/products/?category=nutrition" class="btn btn-light rounded-3 text-uppercase" tabindex="-1" role="button" aria-disabled="true">shop now</a>
-          </div>
-        </div>
-      </div>     
- </section>
+        </section>
+        <section>
+               <h2>Train</h2>
+               <li class="list-inline-item">
+                               <div class=""><i class="fa-solid fa-person-running fa-2xl"></i></div>
+                               <span>Running</span>
+                              </li>
+               <li class="list-inline-item">
+                              <div class=""><i class="fa-solid fa-dumbbell fa-2xl"></i></div>
+                              <span>Weights</span>
+                              </li>
+               <li class="list-inline-item">
+                               <div class=""><i class="fa-solid fa-heart fa-2xl"></i></div>
+              <span>Cardio</span>
+                              </li>
+               <li class="list-inline-item">
+                               <div class=""><i class="fa-solid fa-person-running fa-2xl"></i></div>
+              <span>More Running</span>
+                              </li>
+                          
+               
+        </section>
+     </row>
+    </div>
+  </div>
 
 
-{% endblock %}
+  
+  
+ 
+     
+         
+     
+
+    {% endblock %}
+    
+
+
+
 Postload Javascript
 {% block postloadjs %}
 {% endblock %}
