--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -1,3 +1,7 @@
+.fa-2xl {
+  color:orange;
+}
+
 .box {
     position: relative;
     text-align: left;
@@ -12,8 +16,8 @@
     padding-bottom: 1rem;
 }
 
-.category-section {
-  background: #f9f2f0;
+.section-train {
+  background: #f8f8f8;
 }
 
 /* .container-fluid { */
@@ -59,6 +63,7 @@
         display: table;
          clear: both;
       }
+      
       
       /* Responsive layout - makes a two column-layout instead of four columns */
       @media screen and (max-width: 900px) {
