--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,6 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
 
 /* --- Global styling --- */
+
+body {
+    background: #f8f8f8;
+}
+
 .navbar {
     background-color: white;
 }
